# alignoth

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  test.json
.github/: dependabot.yml
.github/workflows/: apply-clippy-lints.yaml  release-please.yml  rust.yml
examples/: plot.html
resources/: plot.html.tera  plot.vl.json  vega-embed.min.js  vega-lite.min.js  vega.min.js
src/: cli.rs  data.rs  highlight.rs  main.rs  plot.rs  utils.rs  wizard.rs
tests/: reference.fa.fai
tests/sample_1/: reference.fa
tests/sample_2/: ref.fa.fai  sample.bam.bai
tests/sample_3/: 1257A.vcf  1:257A.vcf  NA12878_with_clipping_read.bam  NA12878_with_clipping_read.bam.bai
