[package]
name = "alignoth"
description = "A tool for creating alignment plots from bam files"
license = "MIT"
version = "0.16.3"
authors = ["Felix Wiegand <felix.wiegand@tu-dortmund.de>", "Johannes Köster <johannes.koester@tu-dortmund.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
rust-htslib = "0.50.0"
bio = "3.0.0"
log = "0.4.28"
simplelog = "0.12.2"
anyhow = "1.0.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
itertools = "0.14.0"
csv = "1.3.1"
tera = "1.20.0"
reqwest = "0.12" # 0.12 seems to cause issues fetching vega libs from cdn
tokio = { version = "1", features = ["full"] }
inquire = "0.8.0"
lz-str = "0.2.1"

[profile.release]
lto = "fat"
codegen-units = 1
