[package]
name = "alignoth"
description = "A tool for creating alignment plots from bam files"
license = "MIT"
version = "1.4.6"
authors = ["Felix Wiegand <felix.wiegand@tu-dortmund.de>", "Johannes Köster <johannes.koester@tu-dortmund.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
rust-htslib = "0.51.0"
bio = "2.3.0"
log = "0.4.29"
simplelog = "0.12.2"
anyhow = "1.0.101"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.9.2"
itertools = "0.14.0"
csv = "1.4.0"
tera = "1.20.1"
tokio = { version = "1", features = ["full"] }
inquire = "0.9.2"
lz-str = "0.2.1"

[profile.release]
lto = "fat"
codegen-units = 1
