[package]
name = "alignoth"
description = "A tool for creating alignment plots from bam files"
license = "MIT"
version = "1.5.1"
authors = ["Felix Wiegand <felix.wiegand@tu-dortmund.de>", "Johannes Köster <johannes.koester@tu-dortmund.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
rust-htslib = "1.0.1"
bio = "4.0.0"
log = "0.4.30"
simplelog = "0.12.2"
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
rand = "0.10.1"
itertools = "0.15.0"
csv = "1.4.0"
tera = "2.0.0"
tokio = { version = "1", features = ["full"] }
inquire = "0.9.4"
lz-str = "0.2.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
